--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,15 @@ a {
     margin: 0 auto;  
 }
 
-
+#welcome-section small{    
+    font-style: italic;
+    font-weight: 300;
+    margin: 0 auto;  
+}
+#welcome-section small a:hover{
+    color: #DA0C81;
+    font-size: 1rem;    
+}
 
 /* projects section  */
 .projects-section {
